cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set the project name
project(Ejecutables)

# Add subdirectories where the other CMakeLists.txt files are located
add_subdirectory(Parcial)
add_subdirectory(Tarea1)
add_subdirectory(Tarea2)
add_subdirectory(Leetcode)
add_subdirectory(TareaClases)
add_subdirectory(Parcial2)
add_subdirectory(TareaSTL)